--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,6 @@
 body{font-size:3em;font-family:sans-serif;font-weight:bold;margin:0;padding:0;background:#000;color:#fff;}
 ul{list-style:none;}
+input{font-size:1em;font-family:sans-serif;}
 .trigger1{color:#fff;}
 .trigger2{color:#ff0;}
 .trigger3{color:#f80;}
